--- a/about.html
+++ b/about.html
@@ -25,33 +25,20 @@
     </nav>    
     <main>
         <section>
-            <h2>Why __ Was Created </h2>
+            <h2>Why Better Bikepath Was Created </h2>
             <p>
-                Created for HackMIT on September 14-15th 2024 by four students. We have a concern for bike paths in Boston as Google Maps often leads bikers on dangerous paths such as highways, crossing illegal roads, etc.
+                Created for HackMIT on September 14-15th 2024 by four students. We have a concern for bike paths in Boston as Google Maps often 
+                leads bikers on dangerous paths such as highways, crossing illegal roads, etc.
             </p>
         </section>
 
         <section>
-            <h2>About the Project</h2>
+            <h2>The Goal</h2>
             <p>
-                Welcome to the <strong>Bike Route Enhancer</strong> project! Our mission is to improve bike routes by crowdsourcing 
-                feedback from cyclists. Help us make cycling safer and more enjoyable by reporting areas to avoid due to traffic, poor 
-                road conditions, lack of bike lanes, or any other hazards.
-            </p>
-        </section>
-
-        <section>
-            <h2>Get Started</h2>
-            <p>
-                Ready to contribute to better biking? Click the button below to start reporting avoidance places and improving routes for everyone.
-            </p>
-            <a class="button" href="#map-interface">Start Reporting</a>
-        </section>
-
-        <section>
-            <h2>Why Crowdsourcing?</h2>
-            <p>
-                Crowdsourcing allows the cycling community to directly improve route recommendations. While standard map services like Google Maps provide basic bike routes, they don't always account for real-time issues like construction, accidents, or bad road conditions. Your on-the-ground experience can help make biking better for everyone.
+                We hope to <strong> improve safety, increase use of bikers, and foster Boston to be a more green city. </strong> The roads in Boston
+                are already super run down and are constantly being worked on. However, bike lanes are not as focused on despite it seeming like
+                there are secure, fenced off bike lanes everywhere. Some bike lines split from one side to the other of the road in the middle of an
+                intersection, which is not only dangerous for the biker, but also for any drivers on the road. 
             </p>
         </section>
     </main>
