--- a/about.html
+++ b/about.html
@@ -29,6 +29,7 @@
             <p>
                 Created for HackMIT on September 14-15th 2024 by four students. We have a concern for bike paths in Boston as Google Maps often 
                 leads bikers on dangerous paths such as highways, crossing illegal roads, etc.
+                <div> <img class="img" src="grouppic.JPG"> </div>
             </p>
         </section>
 
